{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 10,
  "lineage": "4e54d2b8-cc15-cf42-5824-c078d2d48f5b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testInstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-42a2532b",
            "arn": "arn:aws:ec2:us-east-1:062424505582:instance/i-09f9d31e35cc0e1b4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09f9d31e35cc0e1b4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0d7b104774bf7cece",
            "private_dns": "ip-10-0-1-199.ec2.internal",
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-34-238-119-203.compute-1.amazonaws.com",
            "public_ip": "34.238.119.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-07e9deb9548338416",
                "volume_size": 20,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1f7540e57afdb4b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07701d5781082cd38"
            ]
          },
          "depends_on": [
            "aws_security_group.My_VPC_Security_Group",
            "aws_subnet.My_VPC_Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My_VPC_GW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-002230832d19df818",
            "owner_id": "062424505582",
            "tags": {
              "Name": "My VPC Internet Gateway"
            },
            "vpc_id": "vpc-0cce0f16279e8c8ef"
          },
          "depends_on": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "My_VPC_Security_ACL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "id": "acl-01f1f44699ba78a62",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "062424505582",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0d1f7540e57afdb4b"
            ],
            "tags": {
              "Name": "My VPC ACL"
            },
            "vpc_id": "vpc-0cce0f16279e8c8ef"
          },
          "depends_on": [
            "aws_subnet.My_VPC_Subnet",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "My_VPC_internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-002230832d19df818",
            "id": "r-rtb-0f4ac19506a4653bc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f4ac19506a4653bc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.My_VPC_GW",
            "aws_route_table.My_VPC_route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "My_VPC_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f4ac19506a4653bc",
            "owner_id": "062424505582",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "My VPC Route Table"
            },
            "vpc_id": "vpc-0cce0f16279e8c8ef"
          },
          "depends_on": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "My_VPC_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af87efc32de0a415",
            "route_table_id": "rtb-0f4ac19506a4653bc",
            "subnet_id": "subnet-0d1f7540e57afdb4b"
          },
          "depends_on": [
            "aws_route_table.My_VPC_route_table",
            "aws_subnet.My_VPC_Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_VPC_Security_Group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062424505582:security-group/sg-07701d5781082cd38",
            "description": "My VPC Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07701d5781082cd38",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "My VPC Security Group",
            "name_prefix": null,
            "owner_id": "062424505582",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "My VPC Security Group",
              "Name": "My VPC Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cce0f16279e8c8ef"
          },
          "depends_on": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "My_VPC_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062424505582:subnet/subnet-0d1f7540e57afdb4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d1f7540e57afdb4b",
            "map_public_ip_on_launch": true,
            "owner_id": "062424505582",
            "tags": {
              "Name": "My VPC Subnet"
            },
            "vpc_id": "vpc-0cce0f16279e8c8ef"
          },
          "depends_on": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:062424505582:vpc/vpc-0cce0f16279e8c8ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a06d1f69647a73d1",
            "default_route_table_id": "rtb-00cbda2823690c3c5",
            "default_security_group_id": "sg-0feaecc8a5b86adfd",
            "dhcp_options_id": "dopt-d6879aad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cce0f16279e8c8ef",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00cbda2823690c3c5",
            "owner_id": "062424505582",
            "tags": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}